src/test/resources/arp/invalid/arp_nonlinear_rd.sil
field f: Int

method foo(x: Ref)
requires acc(x.f, rd*rd)
ensures acc(x.f, rd*rd)
{
}